cleaned up code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- create hidden templates to store api get results -->
 <div class="templates hidden">  <!-- 'templates' class referenced in apiget.js, 'hidden' class declared in css -->
-			<dl class="results itemInfo">  <!-- 'results' class declared in css, 'info' class referenced in apiget.js -->
+			<dl class="results-list itemInfo">  <!-- 'results' class declared in css, 'info' class referenced in apiget.js -->
 				<dt>Info</dt>  <!-- displays content returned -->
 					<dd class="display-info"></dd>
 			</dl>
