started adding a bit of styling and added object listing url to listing title

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <!-- create hidden templates to store api get results -->
 <div class="templates hidden">  <!-- 'templates' class referenced in apiget.js, 'hidden' class declared in css -->
 			<dl class="results-list itemInfo">  <!-- 'results' class declared in css, 'info' class referenced in apiget.js -->
-					<dt>Listing title:</dt>
+					<dt>Fashion Find:</dt>
 					<dd class="listing-title"></dd>
-					<dt>Listing description:</dt>
+					<dt><br>Why it's awesome:</dt>
 					<dd class="listing-desc"></dd>
 			</dl>
 			<div class="error-msg">
