added footer with TM disclaimer and links to social channels

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- About the app -->
 		<h1>Seasoned and Sassy</h1>
 		<p>Ever wonder who writes those fashion "rules"?</p>
-		<p>Ignore the self-appointed fashion police. What better place than the Etsy online market to find the fashion and accessories that flaunt convention? </p>
+		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place online than Etsy.</p>
 </header>
 
 <!-- get input from user -->
@@ -36,13 +36,16 @@
 			</div>
 </div>
 
-<!--<footer>
-		<p>"The term 'Etsy' is a trademark of Etsy, Inc. This application uses the Etsy API but is not endorsed or certified by Etsy, Inc." <a itemprop="url" href="www.balboapark.org/">Visit the Balboa Park website</a></p>
+<footer>
+		<p>The term 'Etsy' is a trademark of Etsy, Inc. This application uses the Etsy API but is not endorsed or certified by Etsy, Inc.</p>
+		<p>Follow Etsy</p>
 		<ul class="social">
-				<li>https://www.instagram.com/balboapark/</li>
-				<li>https://twitter.com/balboapark</li>
+          <li class="social fb"><a href="https://www.facebook.com/Etsy">Facebook</a></li>
+          <li class="social twitter"><a href="https://www.twitter.com/etsy">Twitter</a></li>
+          <li class="social pin"><a href="https://www.pinterest.com/etsy">Pinterest</a></li>
+          <li class="social instagram"><a href="https://www.instagram.com/etsy">Instagram</a></li>
 		</ul>
-</footer> -->
+</footer>
 
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script src="js/apiget.js"></script>
