--- a/index.html
+++ b/index.html
@@ -15,34 +15,36 @@
 		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place online than Etsy.</p>
 </header>
 <div class="main-container">
-<!-- get input from user -->
-<form class="etsy-search">
-	<input type="text" placeholder="e.g., jacket or jewelry..." name="terms" size="30" autofocus required>
-	<input type="submit" value="Search Etsy">
-</form>
+		<!-- get input from user -->
+		<form  class="etsy-search">
+			<input type="text" name="terms" placeholder="e.g., jacket or jewelry..." name="terms" size="30" autofocus required>
+			<input type="submit" value="Search Etsy">
+		</form>
 
-<!-- display # of results and content returned from api call -->
-<div class="search-results-qty"></div>
-<div class="results listing"></div>
+		<!-- display # of results and content returned from api call -->
+		<div class="search-results-qty"></div>
+		<div class="results listing"></div>
 
-<!-- create hidden templates to store api get results -->
-<div class="templates hidden">  <!-- 'templates' class referenced in apiget.js, 'hidden' class declared in css -->
-			<dl class="results-list itemInfo">  <!-- 'results' class declared in css, 'info' class referenced in apiget.js -->
-					<dt><h3>Fashion find:</h3></dt>
-					<dd class="listing-title"></dd>
-					<!-- <dt></dt>
-					<dd class="listing-img"></dd> -->
-					<dt><h3>Why it's awesome:</h3></dt>
-					<dd class="listing-desc"></dd>
-					<dt><br>******************************</dt>
-			</dl>
-			<div class="error-msg">
-					<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
-			</div>
-</div>
-</div>
+		<!-- create hidden templates to store and format results; 'templates' class referenced in apiget.js, 'hidden' class declared in css; 'results' class declared in css, 'info' class referenced in apiget.js-->
+		<div class="templates hidden">
+				<dl class="results-list itemInfo">
+						<dt><h3>Fashion find:</h3></dt>
+						<div class="listing-container">
+								<dd class="listing-img"></dd>
+							  <dd class="listing-title"></dd>
+						</div>
+						<dt><h3>Why it's awesome:</h3></dt>
+								<dd class="listing-desc more"></dd>
+						<dt><br>~~~~~~~~~~~~~~~~~~~~~~~~~</dt>
+				</dl>
+				<div class="error-msg">
+						<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
+				</div>
+		</div>
+</div> <!-- end main-container -->
 <footer>
-		<p>The term 'Etsy' is a trademark of Etsy, Inc. This application uses the Etsy API but is not endorsed or certified by Etsy, Inc.</p>
+		<p>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+		<p>The term 'Etsy' is a trademark of Etsy, Inc.<br>This application uses the Etsy API but is not endorsed or certified by Etsy, Inc.</p>
 		<ul class="social">
           <li class="social">Follow Etsy: </li>
 					<li class="social fb"><a href="https://www.facebook.com/Etsy">Facebook</a></li>
