finished styling input and results qty boxes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </header>
 <div class="main-container">
 		<!-- get input from user -->
-		<form  class="etsy-search">
-			<input type="text" name="terms" placeholder="e.g., jacket or jewelry..." name="terms" size="30" autofocus required>
-			<input type="submit" value="Search Etsy">
+		<form class="etsy-search">
+			<input class="search-query-box" type="text" name="terms" placeholder="e.g., jacket or jewelry..." name="terms" size="30" autofocus required>
+			<input class="search-button" type="submit" value="Search Etsy">
 		</form>
 
 		<!-- display # of results and content returned from api call -->
