--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<h1>Seasoned and Sassy ~</h1>
 		<p>Ever wonder who writes those fashion "rules"?</p>
 		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place online than Etsy.</p>
+		<p>Go ahead; search for the wildest, most fun fashion items you've always wanted.</p>
 </header>
 <div class="main-container">
 		<!-- get input from user -->
@@ -52,6 +53,7 @@
           <li class="social pin"><a href="https://www.pinterest.com/etsy">Pinterest</a></li>
           <li class="social instagram"><a href="https://www.instagram.com/etsy">Instagram</a></li>
 		</ul>
+		<p>  Lynne & Co.  |  &#169; 2016  </p> 
 </footer>
 
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
