renamed some of the more-less vars for troubleshooting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Seasoned and Sassy ~</h1>
 		<p>Ever wonder who writes those fashion "rules"?</p>
 		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place online than Etsy.</p>
-		<p>Go ahead; search for the wildest, most fun fashion items you've always wanted.</p>
+		<p>Go ahead; search for the wildest, most fun fashion items you've ever wanted.</p>
 </header>
 
 <div class="main-container">
