--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- About the app -->
 		<h1>Seasoned and Sassy ~</h1>
 		<p>Ever wonder who writes those fashion "rules"?</p>
-		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place online than Etsy.</p>
+		<p>Ignore the self-appointed fashion police. If you want to find fashion and accessories that flaunt convention, there's no better place than Etsy.</p>
 		<p>Go ahead; search for the wildest, most unusual fashion items you've ever wanted.</p>
 </header>
 
